--- a/config.yaml
+++ b/config.yaml
@@ -10,7 +10,7 @@ processing_steps:
   return_magnitude_batch_name: batch4}
 - {arg_batch_name: batch1, function: edge_detect, method: compass, return_direction_batch_name: batch7,
   return_magnitude_batch_name: batch6}
-- {arg_batch_name: batch1, bin_thresh: 128, function: binary_thresh, return_batch_name: batch8}
+- {arg_batch_name: batch1, function: histogram_thresh, return_batch_name: batch8}
 - arg_batch_name: batch8
   function: dilation
   hot_x: 1
@@ -33,14 +33,14 @@ processing_steps:
   use_loc: false}
 - {arg_batch_name: batch1, function: k_means_clustering, k: 5, return_batch_name: batch12,
   use_loc: true}
-- {arg_batch_name: batch1, file_prefix: cyl01_greyscale, function: save_image_set}
+- {arg_batch_name: batch1, file_prefix: cyl01_grayscale, function: save_image_set}
 - {arg_batch_name: batch2, file_prefix: cyl01_prewitt_edge_mag, function: save_image_set}
 - {arg_batch_name: batch3, file_prefix: cyl01_prewitt_edge_dir, function: save_image_set}
 - {arg_batch_name: batch4, file_prefix: cyl01_sobel_edge_mag, function: save_image_set}
 - {arg_batch_name: batch5, file_prefix: cyl01_sobel_edge_dir, function: save_image_set}
 - {arg_batch_name: batch6, file_prefix: cyl01_compass_edge_mag, function: save_image_set}
 - {arg_batch_name: batch7, file_prefix: cyl01_compass_edge_dir, function: save_image_set}
-- {arg_batch_name: batch8, file_prefix: cyl01_binary_thresh, function: save_image_set}
+- {arg_batch_name: batch8, file_prefix: cyl01_histogram_thresh, function: save_image_set}
 - {arg_batch_name: batch9, file_prefix: cyl01_dilation, function: save_image_set}
 - {arg_batch_name: batch10, file_prefix: cyl01_erosion, function: save_image_set}
 - {arg_batch_name: batch11, file_prefix: cyl01_k_means_no_loc, function: save_image_set}
@@ -52,7 +52,7 @@ processing_steps:
   return_magnitude_batch_name: batch4}
 - {arg_batch_name: batch1, function: edge_detect, method: compass, return_direction_batch_name: batch7,
   return_magnitude_batch_name: batch6}
-- {arg_batch_name: batch1, bin_thresh: 128, function: binary_thresh, return_batch_name: batch8}
+- {arg_batch_name: batch1, function: histogram_thresh, return_batch_name: batch8}
 - arg_batch_name: batch8
   function: dilation
   hot_x: 1
@@ -75,14 +75,14 @@ processing_steps:
   use_loc: false}
 - {arg_batch_name: batch1, function: k_means_clustering, k: 5, return_batch_name: batch12,
   use_loc: true}
-- {arg_batch_name: batch1, file_prefix: inter01_greyscale, function: save_image_set}
+- {arg_batch_name: batch1, file_prefix: inter01_grayscale, function: save_image_set}
 - {arg_batch_name: batch2, file_prefix: inter01_prewitt_edge_mag, function: save_image_set}
 - {arg_batch_name: batch3, file_prefix: inter01_prewitt_edge_dir, function: save_image_set}
 - {arg_batch_name: batch4, file_prefix: inter01_sobel_edge_mag, function: save_image_set}
 - {arg_batch_name: batch5, file_prefix: inter01_sobel_edge_dir, function: save_image_set}
 - {arg_batch_name: batch6, file_prefix: inter01_compass_edge_mag, function: save_image_set}
 - {arg_batch_name: batch7, file_prefix: inter01_compass_edge_dir, function: save_image_set}
-- {arg_batch_name: batch8, file_prefix: inter01_binary_thresh, function: save_image_set}
+- {arg_batch_name: batch8, file_prefix: inter01_histogram_thresh, function: save_image_set}
 - {arg_batch_name: batch9, file_prefix: inter01_dilation, function: save_image_set}
 - {arg_batch_name: batch10, file_prefix: inter01_erosion, function: save_image_set}
 - {arg_batch_name: batch11, file_prefix: inter01_k_means_no_loc, function: save_image_set}
@@ -94,7 +94,7 @@ processing_steps:
   return_magnitude_batch_name: batch4}
 - {arg_batch_name: batch1, function: edge_detect, method: compass, return_direction_batch_name: batch7,
   return_magnitude_batch_name: batch6}
-- {arg_batch_name: batch1, bin_thresh: 128, function: binary_thresh, return_batch_name: batch8}
+- {arg_batch_name: batch1, function: histogram_thresh, return_batch_name: batch8}
 - arg_batch_name: batch8
   function: dilation
   hot_x: 1
@@ -117,14 +117,14 @@ processing_steps:
   use_loc: false}
 - {arg_batch_name: batch1, function: k_means_clustering, k: 5, return_batch_name: batch12,
   use_loc: true}
-- {arg_batch_name: batch1, file_prefix: let01_greyscale, function: save_image_set}
+- {arg_batch_name: batch1, file_prefix: let01_grayscale, function: save_image_set}
 - {arg_batch_name: batch2, file_prefix: let01_prewitt_edge_mag, function: save_image_set}
 - {arg_batch_name: batch3, file_prefix: let01_prewitt_edge_dir, function: save_image_set}
 - {arg_batch_name: batch4, file_prefix: let01_sobel_edge_mag, function: save_image_set}
 - {arg_batch_name: batch5, file_prefix: let01_sobel_edge_dir, function: save_image_set}
 - {arg_batch_name: batch6, file_prefix: let01_compass_edge_mag, function: save_image_set}
 - {arg_batch_name: batch7, file_prefix: let01_compass_edge_dir, function: save_image_set}
-- {arg_batch_name: batch8, file_prefix: let01_binary_thresh, function: save_image_set}
+- {arg_batch_name: batch8, file_prefix: let01_histogram_thresh, function: save_image_set}
 - {arg_batch_name: batch9, file_prefix: let01_dilation, function: save_image_set}
 - {arg_batch_name: batch10, file_prefix: let01_erosion, function: save_image_set}
 - {arg_batch_name: batch11, file_prefix: let01_k_means_no_loc, function: save_image_set}
@@ -136,7 +136,7 @@ processing_steps:
   return_magnitude_batch_name: batch4}
 - {arg_batch_name: batch1, function: edge_detect, method: compass, return_direction_batch_name: batch7,
   return_magnitude_batch_name: batch6}
-- {arg_batch_name: batch1, bin_thresh: 128, function: binary_thresh, return_batch_name: batch8}
+- {arg_batch_name: batch1, function: histogram_thresh, return_batch_name: batch8}
 - arg_batch_name: batch8
   function: dilation
   hot_x: 1
@@ -159,14 +159,14 @@ processing_steps:
   use_loc: false}
 - {arg_batch_name: batch1, function: k_means_clustering, k: 5, return_batch_name: batch12,
   use_loc: true}
-- {arg_batch_name: batch1, file_prefix: mod01_greyscale, function: save_image_set}
+- {arg_batch_name: batch1, file_prefix: mod01_grayscale, function: save_image_set}
 - {arg_batch_name: batch2, file_prefix: mod01_prewitt_edge_mag, function: save_image_set}
 - {arg_batch_name: batch3, file_prefix: mod01_prewitt_edge_dir, function: save_image_set}
 - {arg_batch_name: batch4, file_prefix: mod01_sobel_edge_mag, function: save_image_set}
 - {arg_batch_name: batch5, file_prefix: mod01_sobel_edge_dir, function: save_image_set}
 - {arg_batch_name: batch6, file_prefix: mod01_compass_edge_mag, function: save_image_set}
 - {arg_batch_name: batch7, file_prefix: mod01_compass_edge_dir, function: save_image_set}
-- {arg_batch_name: batch8, file_prefix: mod01_binary_thresh, function: save_image_set}
+- {arg_batch_name: batch8, file_prefix: mod01_histogram_thresh, function: save_image_set}
 - {arg_batch_name: batch9, file_prefix: mod01_dilation, function: save_image_set}
 - {arg_batch_name: batch10, file_prefix: mod01_erosion, function: save_image_set}
 - {arg_batch_name: batch11, file_prefix: mod01_k_means_no_loc, function: save_image_set}
@@ -178,7 +178,7 @@ processing_steps:
   return_magnitude_batch_name: batch4}
 - {arg_batch_name: batch1, function: edge_detect, method: compass, return_direction_batch_name: batch7,
   return_magnitude_batch_name: batch6}
-- {arg_batch_name: batch1, bin_thresh: 128, function: binary_thresh, return_batch_name: batch8}
+- {arg_batch_name: batch1, function: histogram_thresh, return_batch_name: batch8}
 - arg_batch_name: batch8
   function: dilation
   hot_x: 1
@@ -201,14 +201,14 @@ processing_steps:
   use_loc: false}
 - {arg_batch_name: batch1, function: k_means_clustering, k: 5, return_batch_name: batch12,
   use_loc: true}
-- {arg_batch_name: batch1, file_prefix: para01_greyscale, function: save_image_set}
+- {arg_batch_name: batch1, file_prefix: para01_grayscale, function: save_image_set}
 - {arg_batch_name: batch2, file_prefix: para01_prewitt_edge_mag, function: save_image_set}
 - {arg_batch_name: batch3, file_prefix: para01_prewitt_edge_dir, function: save_image_set}
 - {arg_batch_name: batch4, file_prefix: para01_sobel_edge_mag, function: save_image_set}
 - {arg_batch_name: batch5, file_prefix: para01_sobel_edge_dir, function: save_image_set}
 - {arg_batch_name: batch6, file_prefix: para01_compass_edge_mag, function: save_image_set}
 - {arg_batch_name: batch7, file_prefix: para01_compass_edge_dir, function: save_image_set}
-- {arg_batch_name: batch8, file_prefix: para01_binary_thresh, function: save_image_set}
+- {arg_batch_name: batch8, file_prefix: para01_histogram_thresh, function: save_image_set}
 - {arg_batch_name: batch9, file_prefix: para01_dilation, function: save_image_set}
 - {arg_batch_name: batch10, file_prefix: para01_erosion, function: save_image_set}
 - {arg_batch_name: batch11, file_prefix: para01_k_means_no_loc, function: save_image_set}
@@ -220,7 +220,7 @@ processing_steps:
   return_magnitude_batch_name: batch4}
 - {arg_batch_name: batch1, function: edge_detect, method: compass, return_direction_batch_name: batch7,
   return_magnitude_batch_name: batch6}
-- {arg_batch_name: batch1, bin_thresh: 128, function: binary_thresh, return_batch_name: batch8}
+- {arg_batch_name: batch1, function: histogram_thresh, return_batch_name: batch8}
 - arg_batch_name: batch8
   function: dilation
   hot_x: 1
@@ -243,14 +243,14 @@ processing_steps:
   use_loc: false}
 - {arg_batch_name: batch1, function: k_means_clustering, k: 5, return_batch_name: batch12,
   use_loc: true}
-- {arg_batch_name: batch1, file_prefix: super01_greyscale, function: save_image_set}
+- {arg_batch_name: batch1, file_prefix: super01_grayscale, function: save_image_set}
 - {arg_batch_name: batch2, file_prefix: super01_prewitt_edge_mag, function: save_image_set}
 - {arg_batch_name: batch3, file_prefix: super01_prewitt_edge_dir, function: save_image_set}
 - {arg_batch_name: batch4, file_prefix: super01_sobel_edge_mag, function: save_image_set}
 - {arg_batch_name: batch5, file_prefix: super01_sobel_edge_dir, function: save_image_set}
 - {arg_batch_name: batch6, file_prefix: super01_compass_edge_mag, function: save_image_set}
 - {arg_batch_name: batch7, file_prefix: super01_compass_edge_dir, function: save_image_set}
-- {arg_batch_name: batch8, file_prefix: super01_binary_thresh, function: save_image_set}
+- {arg_batch_name: batch8, file_prefix: super01_histogram_thresh, function: save_image_set}
 - {arg_batch_name: batch9, file_prefix: super01_dilation, function: save_image_set}
 - {arg_batch_name: batch10, file_prefix: super01_erosion, function: save_image_set}
 - {arg_batch_name: batch11, file_prefix: super01_k_means_no_loc, function: save_image_set}
@@ -262,7 +262,7 @@ processing_steps:
   return_magnitude_batch_name: batch4}
 - {arg_batch_name: batch1, function: edge_detect, method: compass, return_direction_batch_name: batch7,
   return_magnitude_batch_name: batch6}
-- {arg_batch_name: batch1, bin_thresh: 128, function: binary_thresh, return_batch_name: batch8}
+- {arg_batch_name: batch1, function: histogram_thresh, return_batch_name: batch8}
 - arg_batch_name: batch8
   function: dilation
   hot_x: 1
@@ -285,14 +285,14 @@ processing_steps:
   use_loc: false}
 - {arg_batch_name: batch1, function: k_means_clustering, k: 5, return_batch_name: batch12,
   use_loc: true}
-- {arg_batch_name: batch1, file_prefix: svar01_greyscale, function: save_image_set}
+- {arg_batch_name: batch1, file_prefix: svar01_grayscale, function: save_image_set}
 - {arg_batch_name: batch2, file_prefix: svar01_prewitt_edge_mag, function: save_image_set}
 - {arg_batch_name: batch3, file_prefix: svar01_prewitt_edge_dir, function: save_image_set}
 - {arg_batch_name: batch4, file_prefix: svar01_sobel_edge_mag, function: save_image_set}
 - {arg_batch_name: batch5, file_prefix: svar01_sobel_edge_dir, function: save_image_set}
 - {arg_batch_name: batch6, file_prefix: svar01_compass_edge_mag, function: save_image_set}
 - {arg_batch_name: batch7, file_prefix: svar01_compass_edge_dir, function: save_image_set}
-- {arg_batch_name: batch8, file_prefix: svar01_binary_thresh, function: save_image_set}
+- {arg_batch_name: batch8, file_prefix: svar01_histogram_thresh, function: save_image_set}
 - {arg_batch_name: batch9, file_prefix: svar01_dilation, function: save_image_set}
 - {arg_batch_name: batch10, file_prefix: svar01_erosion, function: save_image_set}
 - {arg_batch_name: batch11, file_prefix: svar01_k_means_no_loc, function: save_image_set}
